[skins] Dark skin: fix charts "Saved" legend not visible in tooltip (fix #1039)

--- a/client/components/charts/charts.css
+++ b/client/components/charts/charts.css
@@ -108,6 +108,10 @@ body.dark .c3-tooltip-container {
     color: black;
 }
 
+body.dark .c3-tooltip td > span {
+    border: 1px solid black;
+}
+
 .dygraph-axis-label,
 .dygraph-legend {
     color: var(--charts-axis-color);
